--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.4",
+    "@tsparticles/react": "^3.0.0",
     "@types/mdx": "^2.0.13",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
@@ -33,6 +35,8 @@
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-tsparticles": "^2.9.3",
     "react-use-gesture": "^9.1.3",
     "rehype-pretty-code": "^0.13.2",
     "rehype-stringify": "^10.0.0",
@@ -42,10 +46,12 @@
     "styled-components": "^6.1.12",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^2.9.3",
     "unified": "^11.0.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/matter-js": "^0.19.7",
     "@types/node": "^20",
     "@types/react": "^18",
